# AdaBoost-Tracking

./: .gitignore  CMakeLists.txt  README  README.md  plot_results.gnuplot  results  run_different_k_and_plot.sh
nemo/: README  frames.test  frames.train
splice/: README  splice.test  splice.train
src/: AdaBoost.cc  AdaBoost.hh  Types.hh  WeakClassifier.cc  WeakClassifier.hh  nr1.cc  nr2.cc  nr3.cc  sheet03.cpp
